src/index.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  border: solid 1px red;
}

html{
  font-family: Arial, Helvetica, sans-serif;
  font-size: 10px;
}

.featured img{
  width: 100%;
  padding: 0 5rem;
}
.featured{
  margin-bottom:5rem;
}

.container{
  width: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
.blogs{
 display: flex;
 justify-content: space-around;
 flex-wrap: wrap;
 flex-direction: row;
 width: 70%;

}
.blog-post{
  width: 100%;
  max-width: 38rem;
  max-height: none; /*remove for mobile*/
  padding: 2.5rem;
  background-color: white;
  box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
  display: flex;
  align-items: center;
  border-radius: .8rem;
  margin: 5rem auto;
  flex-direction: column;
}

.blog-img{
  min-width: 35rem;
  max-width: 35rem;
  height: 30rem;
  transform: translate(0, -8rem);
  margin-bottom: -5rem;
  /* position: relative;
  margin-left: 2rem; */
}

/* .blog-post{
  padding: 2.5rem;
  flex-direction: column;
  max-height: none;
}

.blog-img{
  min-width: 100%;
  max-width: 100%;
  transform: translate(0, -8rem);
} */

.blog-img img{
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
  border-radius: .8rem;
}

.blog-img img::before{
  content: '';
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background: linear-gradient(to right, rgba(79, 172, 254, .8), rgba (0,242,254,.8));
  box-shadow: .5rem .5rem 3rem 1px rgba(0,0,0,.05);
  border-radius: .8rem;
}

.blog-date span{
  display: block;
  color: rgba(0,0,0,.5);
  font-size: 1.6rem;
  font-weight: 600;
  margin: 0 0 .5rem;
}

.blog-title{
  font-size:2.5rem;
  margin: 1.5rem 0 2rem;
  text-transform: uppercase;
  color: #4facfe;
}

.blog-summary{
  margin-bottom: 3rem;
  font-size: 1.4rem;
  color: rgba(0,0,0,.7);
}

.read-more{
  display: inline-block;
  padding: 1.5rem 3rem;
  letter-spacing: 1px;
  text-transform: uppercase;
  font-size: 1.2rem;
  color: white;
  background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
  border-radius: .8rem;
  text-decoration: none;

}

.read-more:hover{
  background-image: linear-gradient(to right, #00f2fe 0%, #4facfe 100%);
}

/* @media screen and (max-width: 1068px){
  .blog-post{
    max-width: 80rem;
  }

  .blog-img{
    min-width: 30rem;
    max-width: 30rem;
  }
}

@media screen and (max-width: 868px){
  .blog-post{
    max-width: 70rem;
  }

  .blog-img{
    min-width: 100%;
    max-width: 100%;
    transform: translate(0, -8rem);
  }
}

@media screen and (max-width: 768px){
  .blog-post{
    padding: 2.5rem;
    flex-direction: column;
    max-height: none;
  }

  .blog-img{
    min-width: 100%;
    max-width: 100%;
    transform: translate(0, -8rem);
  }
} */

aside{
    width: 20%;
    
    background-color: lightblue;
    
}

aside h2{
  margin-bottom: 2rem;
  font-size: 2rem;
  text-align: center;
}

details{
    margin: 0 4rem;
    padding: 1rem;
    text-align: left;
    font-size: 1.5rem;
}

summary{
  color:black;

}

.article-month{
  color: gray;
}

details p{
  margin: 1.5rem 0;
  text-align: left;
}

aside form{
  width: 100%;
  text-align: center;
  margin-top: 5rem;
}

form label{
  font-size: 2rem;
  font-weight: bold;
  display: block;
  margin-bottom: 1rem;
}

input[type=email]{
  width: 90%;
  padding: 1rem;
  text-align: center;
  font-size: 1.2rem;
}

input[type=submit]{
  padding: .5rem 1rem;
  background-color: white;
  width: 50%;
  margin-top: 1rem;
  font-weight: bold;
  font-size: 1.2rem;

}

.popular-tabs{
  display: block;
  width: 80%;
  margin-left: 20%;
}


.swiper-container {
  display: block;
  width: 80vw;
  margin: 5rem auto;
}

.swiper-slide {
  text-align: center;
  font-size: 18px;
  background: #fff;

  /* Center slide text vertically */
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
}


footer{
    position: relative;
    bottom: 0;
    width: 100%;
    display: block;
    padding: 5rem;
    background-color: lightblue;
    text-align: center;
    font-size: 1.6rem;

}

